--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,11 @@ name = "kb"
 version = "0.1.0"
 authors = ["Matt Bettcher <mattbettcher@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+build = "build.rs" # LALRPOP preprocessing
 
 [dependencies]
+lalrpop-util = "0.19.6"
+regex = "1"
+
+[build-dependencies]
+lalrpop = "0.19.6"
